@@ -60,6 +60,11 @@
 # 2017-01-09      roveda      0.02
 #   Renamed to watch_oracle.sh
 #
+# 2018-02-14      roveda      0.03
+#   Changed all checks for successful sourcing the environment to
+#   -z "$ORACLE_SID"
+#   instead of
+#   $? -ne 0 (what does not work)
 #
 #
 # ===================================================================
@@ -92,9 +97,9 @@ fi
 
 . "$ORAENV"
 
-if [ $? -ne 0 ] ; then
+if [[ -z "$ORACLE_SID" ]] ; then
   echo 
-  echo "Error: Cannot source environment script '$ORAENV' => aborting script"
+  echo "Error: the Oracle environment is not set up correctly => aborting script"
   exit 2
 fi
 
